task5/deploy/file-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fileservice
  name: fileservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fileservice
  template:
    metadata:
      labels:
        app: fileservice
    spec:
      containers:
        - image: gm-fileservice:v1
          name: fileservice
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
