task5/deploy/file-service/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fileservice
  name: fileservice
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: fileservice
  type: ClusterIP
