task5/deploy/file-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileservice-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fileservice
                port:
                  number: 8082
